# Agentic_RAG_Ollama_Phoenix_RAGAS

./: README.md  docker-compose.yml  main.py  nb5-nginx.conf  pyproject.toml  requirements.txt
api/: __init__.py  li_memory.py  main.py  schemas.py
crewai_agents/: crew.py
crewai_agents/prompts/: base_prompt.yaml  optimized_prompt.yaml
data_pipeline/: docling_loader.py
evaluation/: phoenix_traces.jsonl  phoenix_tracing.py  ragas_eval.py  ragas_small.py
rag_core/: pipeline.py  retriever.py
